agregue cambios en el html en imgs y agregue gitignore

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia por si te interesa Vivir En Suiza.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
-			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/suiza.jpg" width="500" height="180" alt="persona1">
+			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/suiza.jpg" href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" width="500" height="180" alt="persona1">
 		</div>
 	</div>
 
@@ -197,7 +197,7 @@
 			<p class="justify wow slideInRight">En este Blog te Explicamos como es emigrar a Canada, Por si te interesa Vivir En Canada.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/canada.jpg" width="500" height="180" alt="persona1">
+			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/canada.jpg" href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" width="500" height="180" alt="persona1">
 		</div>
 	</div>
 
@@ -208,7 +208,7 @@
 			<p class="justify wow slideInRight">En este Post ses explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" width="500" height="180" alt="persona1">
+			<img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" width="500" height="180" alt="persona1">
 		</div>
 	</div>
 </div>
