--- a/pages/vivir-en.html
+++ b/pages/vivir-en.html
@@ -106,39 +106,39 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6  col-sm-6">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
+				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/suiza.jpg" width="500" height="180" href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" alt="persona1">
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<h4 class="wow slideInRight">Noticia</h4>
-				<p class="wow slideInRight">Introduccion a la noticia</p>
-				<p class="justify wow slideInRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quasi sit voluptates accusamus, eum ullam labore, rem earum? Reprehenderit, perferendis a iusto, voluptates ut optio numquam eum recusandae laboriosam hic.</p>
-			</div>
-		</div>
-
-		<div class="row vivirEn__noticias">
-			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
-			</div>
-			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<h4 class="wow slideInRight">Noticia</h4>
-				<p class="wow slideInRight">Introduccion a la noticia</p>
-				<p class="justify wow slideInRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quasi sit voluptates accusamus, eum ullam labore, rem earum? Reprehenderit, perferendis a iusto, voluptates ut optio numquam eum recusandae laboriosam hic.</p>
+				<h4 class="wow slideInRight">Vivir En Suiza</h4>
+				<p class="wow slideInRight">Asi se Emigra a Suiza</p>
+				<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia por si te interesa Vivir En Suiza.</p>
 			</div>
 		</div>
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
+				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/españa.jpg" width="500" height="180" href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" alt="persona1">
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<h4 class="wow slideInRight">Noticia</h4>
-				<p class="wow slideInRight">Introduccion a la noticia</p>
-				<p class="justify wow slideInRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quasi sit voluptates accusamus, eum ullam labore, rem earum? Reprehenderit, perferendis a iusto, voluptates ut optio numquam eum recusandae laboriosam hic.</p>
+				<h4 class="wow slideInRight">Vivir En España</h4>
+				<p class="wow slideInRight">Asi se Emigra a España</p>
+				<p class="justify wow slideInRight">En este Post ses explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
+			</div>
+		</div>
+
+		<div class="row vivirEn__noticias">
+			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
+				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/berlin.jpg" width="500" height="180" href="https://www.yomeanimo.com/nacho-en-berlin-su-experiencia-con-la-working-holiday-alemania" alt="persona1">
+			</div>
+			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
+				<h4 class="wow slideInRight">Vivir En Alemania</h4>
+				<p class="wow slideInRight">Asi se emigra a Alemania con "Work and Holiday"</p>
+				<p class="justify wow slideInRight">Nacho te cuenta su experiencia trabajando y viviendo en Alemania, mas espeficico en Berlin la Capital de este Pais Europeo.</p>
 			</div>
 		</div>
 	</div>
 
-	<!-- Vivir en America del Norte -->
+	<!-- Vivir en Asia -->
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12">
@@ -180,7 +180,7 @@
 		</div>
 	</div>
 
-	<!-- Vivir En Asia -->
+	<!-- Vivir En America -->
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12">
@@ -190,39 +190,39 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
+				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/canada.jpg" href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" width="500" height="180" alt="persona1">
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<h4 class="wow slideInRight">Noticia</h4>
-				<p class="wow slideInRight">Introduccion a la noticia</p>
-				<p class="justify wow slideInRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quasi sit voluptates accusamus, eum ullam labore, rem earum? Reprehenderit, perferendis a iusto, voluptates ut optio numquam eum recusandae laboriosam hic.</p>
+				<h4 class="wow slideInRight">Vivir En Canada</h4>
+				<p class="wow slideInRight">Asi se Emigra a Canada</p>
+				<p class="justify wow slideInRight">En este Blog te Explicamos como es emigrar a Canada, Por si te interesa Vivir En Canada.</p>
 			</div>
 		</div>
 
 		<div class="row vivirEn__noticias ">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
+				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/eeuu.jpg"  width="500" height="180" alt="persona1">
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<h4 class="wow slideInRight">Noticia</h4>
-				<p class="wow slideInRight">Introduccion a la noticia</p>
-				<p class="justify wow slideInRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quasi sit voluptates accusamus, eum ullam labore, rem earum? Reprehenderit, perferendis a iusto, voluptates ut optio numquam eum recusandae laboriosam hic.</p>
+				<h4 class="wow slideInRight">Vivir En Estados Unidos</h4>
+				<p class="wow slideInRight">Asi se Emigra a Estados Unidos</p>
+				<p class="justify wow slideInRight">Aqui te Explicamos Como es Vivir En Estados Unidos.</p>
 			</div>
 		</div>
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/persona.jpg" width="500" height="180" alt="persona1">
+				<img class="img-fluid wow slideInRight right" src="../assets/imagenes/argentina.jpg" width="500" height="180" alt="persona1">
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<h4 class="wow slideInRight">Noticia</h4>
-				<p class="wow slideInRight">Introduccion a la noticia</p>
-				<p class="justify wow slideInRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quasi sit voluptates accusamus, eum ullam labore, rem earum? Reprehenderit, perferendis a iusto, voluptates ut optio numquam eum recusandae laboriosam hic.</p>
+				<h4 class="wow slideInRight">Vivir En Argentina</h4>
+				<p class="wow slideInRight">Asi es Vivir En Argentina</p>
+				<p class="justify wow slideInRight">En este Blog te cuentan sobre la experiencia de Vivir en Latino-America, mas especifico en Argentina.</p>
 			</div>
 		</div>
 	</div>
 
-	<!-- Vivir en LatinoAmerica -->
+	<!-- Vivir en Oceania -->
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12">
